# Mes_projets

./: .gitignore
.stfolder/: syncthing-folder-08889a.txt
3.2/: CMakeLists.txt  main.c
3_3/: CMakeLists.txt  main.c
3_4/: CMakeLists.txt  main.c
3_6/: CMakeLists.txt  main.c
3_7/: CMakeLists.txt  main.c
4_1/: CMakeLists.txt  main.c
4_3/: CMakeLists.txt  main.c
6.1/: CMakeLists.txt  main.c
6_2/: CMakeLists.txt  main.c
6_3/: CMakeLists.txt  main.c
6_4/: CMakeLists.txt  main.c
6_5/: CMakeLists.txt  main.c
9_1/: CMakeLists.txt  main.c
9_2/: CMakeLists.txt  main.c
9_3/: CMakeLists.txt  main.c
Exercice_position/: CMakeLists.txt  main.c
controle_aquisition/: CMakeLists.txt  main.c
memorize/: CMakeLists.txt  main.c
sokoban/: .gitignore  CMakeLists.txt  main.c  sokoban.h  sokoban_moteur.c
sokoban/levels/: level2.txt
sokoban/sokoban/: CMakeLists.txt  main.c  sokoban.h  sokoban_moteur.c
sokoban/sokoban/levels/: level1.txt
testconfig/: CMakeLists.txt
untitled/: main.c
untitled1/: CMakeLists.txt
